; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_FreeWaitThread.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_FreeWaitThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WaitThreadList = common dso_local global i32* null, align 8
@INFINITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FreeWaitThread() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = load i32*, i32** @WaitThreadList, align 8
  %6 = call i32 @LockList(i32* %5)
  %7 = load i32*, i32** @WaitThreadList, align 8
  %8 = call i64 @LIST_NUM(i32* %7)
  store i64 %8, i64* %2, align 8
  %9 = load i32*, i32** @WaitThreadList, align 8
  %10 = call i32** @ToArray(i32* %9)
  store i32** %10, i32*** %3, align 8
  %11 = load i32*, i32** @WaitThreadList, align 8
  %12 = call i32 @DeleteAll(i32* %11)
  %13 = load i32*, i32** @WaitThreadList, align 8
  %14 = call i32 @UnlockList(i32* %13)
  store i64 0, i64* %1, align 8
  br label %15

15:                                               ; preds = %29, %0
  %16 = load i64, i64* %1, align 8
  %17 = load i64, i64* %2, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %32

19:                                               ; preds = %15
  %20 = load i32**, i32*** %3, align 8
  %21 = load i64, i64* %1, align 8
  %22 = getelementptr inbounds i32*, i32** %20, i64 %21
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %4, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* @INFINITE, align 4
  %26 = call i32 @WaitThread(i32* %24, i32 %25)
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @ReleaseThread(i32* %27)
  br label %29

29:                                               ; preds = %19
  %30 = load i64, i64* %1, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %1, align 8
  br label %15

32:                                               ; preds = %15
  %33 = load i32**, i32*** %3, align 8
  %34 = call i32 @Free(i32** %33)
  %35 = load i32*, i32** @WaitThreadList, align 8
  %36 = call i32 @ReleaseList(i32* %35)
  store i32* null, i32** @WaitThreadList, align 8
  ret void
}

declare dso_local i32 @LockList(i32*) #1

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local i32** @ToArray(i32*) #1

declare dso_local i32 @DeleteAll(i32*) #1

declare dso_local i32 @UnlockList(i32*) #1

declare dso_local i32 @WaitThread(i32*, i32) #1

declare dso_local i32 @ReleaseThread(i32*) #1

declare dso_local i32 @Free(i32**) #1

declare dso_local i32 @ReleaseList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
